--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -11,7 +11,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #4c4c4c;
+  color: #fff;
   font-family: $mainFont;
   margin: 0;
   padding: 0;
@@ -30,8 +30,8 @@ h2 {
 }
 
 h3 {
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 25px;
+  line-height: 30px;
   font-weight: 600;
 }
 
