--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,145 @@
 @@include('template/layout/header.html')
 
 	<main class="content">
+		<!--<section class="baner">-->
+			<!--<div class="container-fluid">-->
+				<!--<h1>КРАСОТА-->
+					<!--В  ВАШЕМ-->
+					<!--ОТРАЖЕНИИ!</h1>-->
+				<!--<p>BLACK REFLECTION ПОМОЖЕТ-->
+					<!--ПОДЧЕРКНУТЬ ТВОЙ ИНТЕРЬЕР ИНДИВИДУАЛЬНОЙ МЕБЕЛЬЮ.-->
+					<!--БУДЬ ОСОБЕННЫМ. </p>-->
+
+			<!--</div>-->
+		<!--</section>-->
+	<section class="product-titles">
+		<div class="container-fluid">
+			<h3 class="title">Товары</h3>
+			<div class="product-titles-wrap">
+			<div class="row">
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">Зеркала</div>
+					<img src="img/1.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">ТРЮМО</div>
+					<img src="img/2.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">ТУМБЫ И КОМОДЫ</div>
+					<img src="img/3.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">ШКАФЫ И СТЕЛЛАЖИ</div>
+					<img src="img/4.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">ОБЕДЕННЫЕ СТОЛЫ</div>
+					<img src="img/5.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">ЖУРНАЛЬНЫЕ СТОЛИКИ</div>
+					<img src="img/6.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">РАБОЧИЕ СТОЛЫ</div>
+					<img src="img/7.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">КРОВАТИ</div>
+					<img src="img/8.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">ДЕКОР</div>
+					<img src="img/9.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">МЕБЕЛЬ ДЛЯ ВАННОЙ</div>
+					<img src="img/10.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">ТАБУРЕТЫ И ЛАВКИ</div>
+					<img src="img/11.jpg" alt="product" class="img-fluid">
+				</div>
+				<div class="col-sm-3 text-center">
+					<div class="panel-title">КОМПЛЕКТЫ МЕБЕЛИ</div>
+					<img src="img/12.jpg" alt="product" class="img-fluid">
+				</div>
+			</div>
+			</div>
+		</div>
+	</section>
+		<section class="reviews">
+			<div class="container-fluid">
+			<h3 class="title">ОТЗЫВЫ</h3>
+			</div>
+		</section>
+		<section class="faq">
+			<div class="container-fluid">
+				<h3 class="title">ЧАСТО ЗАДАВАЕМЫЕ ВОПРОС (FAQ)</h3>
+				<div class="row">
+				<div class="faq-wrapper">
+					<div class="faq-line">
+						<div>Какого размера Вы можете изготовить изделие?</div>
+					</div>
+					<div class="faq-descr">
+						<div>Мебель изготавливается нами и может быть отредактирована под нужные вам габариты. На сайте указываются стандартные размеры.</div>
+					</div>
+				</div>
+				<div class="faq-wrapper">
+					<div class="faq-line">
+						<div>Отправляете в другие страны?</div>
+					</div>
+					<div class="faq-descr">
+						<div>Конечно.  В страны СНГ и Европы. Имеем опыт и в этом вопрос можете не беспокоиться за свой товар.</div>
+					</div>
+				</div>
+				<div class="faq-wrapper">
+					<div class="faq-line">
+						<div>Из каких материалов изготовляете?</div>
+					</div>
+					<div class="faq-descr">
+						<div>На данный момент основные материалы - это ясень, дуб, сосна, ЛДСП, металл. В дальнейшем список будет пополняться.</div>
+					</div>
+				</div>
+				<div class="faq-wrapper">
+					<div class="faq-line">
+						<div>Какая гарантия, что оно доедет целым?</div>
+					</div>
+					<div class="faq-descr">
+						<div>Гарантию доставки мы берём на себя и гарантируем, что вы все получите в целости и сохранности.</div>
+					</div>
+				</div>
+				<div class="faq-wrapper">
+					<div class="faq-line">
+						<div>Как осуществляется оплата?</div>
+					</div>
+					<div class="faq-descr">
+						<div>Оплата осуществляется при получении, но иногда мы просим задаток при крупных заказах, чтобы удостовериться в честности заказа.</div>
+					</div>
+				</div>
+				<div class="faq-wrapper">
+					<div class="faq-line">
+						<div>Есть ли у Вас шоурумы или магазины?</div>
+					</div>
+					<div class="faq-descr">
+						<div>На сегодняшний день их нет, но сейчас проходят ремонтные работы и в скором времени вы сможете их посетить.</div>
+					</div>
+				</div>
+				<div class="faq-wrapper">
+					<div class="faq-line">
+						<div>Сотрудничаете с дизайнерами и архитекторами?</div>
+					</div>
+					<div class="faq-descr">
+						<div>Да. Мы предоставляем отличные скидки, но только есть условия. Вы должны доказать, что вы являетесь дизайнером или архитектором и у вас крупный заказ.</div>
+					</div>
+				</div>
+			</div>
+
+
+			</div>
+		</section>
+
 
 
 	</main><!-- MAIN CONTENT [END] -->
