--- a/template/layout/header.html
+++ b/template/layout/header.html
@@ -35,16 +35,15 @@
     <!-- HEADER -->
     <header class="header">
         <div class="container-fluid">
+            <div class="header-wrapper">
             <div class="row">
                 <div class="col-lg-3">
                     <a href="#" class="header-logo">
-<span></span>
                         <img src="img/logo.png" alt="logo" class="img-fluid">
                     </a>
                 </div>
             </div>
-
-
+            </div>
 
             <nav class="header__nav" role="navigation">
                 <ul class="header__nav-list">
