--- a/template/index.html
+++ b/template/index.html
@@ -138,7 +138,19 @@
 
 		</section>
 
-
+<section class="about">
+	<div class="container-fluid">
+		<h3 class="title">О нас</h3>
+		<div class="row">
+			<div class="col-sm-4"></div>
+			<div class="col-sm-8">
+				<div class="about-title">
+					<span>BLACK REFLECTION</span> - ЭТО ВАША ВОЗМОЖНОСТЬ ПОДЧЕРКНУТЬ СВОЙ ИНТЕРЬЕР УНИКАЛЬНОЙ, ЭСТЕТИЧЕСКОЙ, СОВРЕМЕННОЙ МЕБЛЬЮ. МЫ С ЛЮБОВЬЮ ОТНОСИМСЯ К КАЖДОЙ ИЗГОТОВЛЕННОЙ НАМИ ДЕТАЛИ И ПОЭТОМУ ВЫ ПОЛУЧИТЕ КАЧЕСТВЕННЫЙ ТОВАР. НЕСМОТРЯ НА ТО, ЧТО НА РЫНКЕ РАБОТАЕМ НЕ ДОЛГО, У НАС УЖЕ СФОРМИРОВАЛАСЬ БОЛЬШАЯ КЛИЕНТСКАЯ БАЗА, В КОТОРОЙ ЕСТЬ НЕ ТОЛЬКО ОБЫЧНЫЕ ЗАКАЗЧИКИ, НО И ДИЗАЙНЕРЫ С АРХИТЕКТОРАМИ.
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 	</main><!-- MAIN CONTENT [END] -->
 
