--- a/template/index.html
+++ b/template/index.html
@@ -1,17 +1,35 @@
 @@include('template/layout/header.html')
 
 	<main class="content">
-		<!--<section class="baner">-->
-			<!--<div class="container-fluid">-->
-				<!--<h1>КРАСОТА-->
-					<!--В  ВАШЕМ-->
-					<!--ОТРАЖЕНИИ!</h1>-->
-				<!--<p>BLACK REFLECTION ПОМОЖЕТ-->
-					<!--ПОДЧЕРКНУТЬ ТВОЙ ИНТЕРЬЕР ИНДИВИДУАЛЬНОЙ МЕБЕЛЬЮ.-->
-					<!--БУДЬ ОСОБЕННЫМ. </p>-->
+		<section class="baner">
+			<div class="container-fluid">
+				<div class="row dnone">
+					<div class="col-sm-4 baner-first"></div>
+					<div class="col-sm-4 baner-second">
+						<h1>КРАСОТА<br>
+						В  ВАШЕМ<br>
+						ОТРАЖЕНИИ!</h1>
+						<p><span>BLACK REFLECTION</span> ПОМОЖЕТ
+						ПОДЧЕРКНУТЬ ТВОЙ ИНТЕРЬЕР ИНДИВИДУАЛЬНОЙ МЕБЕЛЬЮ.
+						БУДЬ ОСОБЕННЫМ. </p>
+					</div>
+					<div class="col-sm-4 baner-third"></div>
+				</div>
+				<div class="row dblock">
+					<div class="col baner-main">
+						<h1>КРАСОТА
+							В  ВАШЕМ
+							ОТРАЖЕНИИ!</h1>
+						<p><span>BLACK REFLECTION</span> ПОМОЖЕТ
+							ПОДЧЕРКНУТЬ ТВОЙ ИНТЕРЬЕР ИНДИВИДУАЛЬНОЙ МЕБЕЛЬЮ.
+							БУДЬ ОСОБЕННЫМ. </p>
+					</div>
+				</div>
 
-			<!--</div>-->
-		<!--</section>-->
+
+			</div>
+
+		</section>
 	<section class="product-titles">
 		<div class="container-fluid">
 			<h3 class="title">Товары</h3>
@@ -72,6 +90,36 @@
 		<section class="reviews">
 			<div class="container-fluid">
 			<h3 class="title">ОТЗЫВЫ</h3>
+				<div class="row">
+					<div class="col-sm-6 offset-sm-3">
+						<div class="reviews-slider">
+							<div>
+								<div class="reviews-slider-img">
+									<img src="img/sl.jpg" alt="slider" class="img-fluid">
+								</div>
+								<div class="reviews-slider-text">
+									<div class="reviews-slider-title">ЕЛЕНА НАУМОВА</div>
+									<div class="reviews-slider-descr">Я ДИЗАЙНЕР ИНТЕРЬЕРОВ. И СТОЛКНУЛОСЬ С ТАКОЙ ПРОБЛЕМОЙ, ЧТО ОКАЗАЛОСЬ ТЯЖЕЛО НАЙТИ НУЖНУЮ МЕБЕЛЬ К МОЕМУ ПРОЕКТУ. ПЕРЕРЫЛА ВЕСЬ ИНТЕРНЕТ И ПОПАЛА НА ЭТИХ РЕБЯТ. БЫЛА ОЧЕНЬ ПРИЯТНО УДИВЛЕНА КАЧЕСТВОМ И СКОРОСТЬЮ. ЗАКАЗ БЫЛ КРУПНЫЙ. БЫЛО НЕСКОЛЬКО ПРОЕКТОВ. ОДИН ИЗ НИХ РЕСТОРАН В СТИЛЕ ЛОФТ. БЫЛА ВЫПОЛНЕНА КОЛОССАЛЬНАЯ РАБОТА И <span>BLACK REFLECTION</span> СПРАВИЛИСЬ С ЭТОЙ ЗАДАЧЕЙ НА ВСЕ 100%. СПАСИБО!</div>
+								</div>
+							</div>
+							<div><div class="reviews-slider-img">
+								<img src="img/sl.jpg" alt="slider" class="img-fluid">
+							</div>
+								<div class="reviews-slider-text">
+									<div class="reviews-slider-title">ЕЛЕНА НАУМОВА</div>
+									<div class="reviews-slider-descr">Я ДИЗАЙНЕР ИНТЕРЬЕРОВ. И СТОЛКНУЛОСЬ С ТАКОЙ ПРОБЛЕМОЙ, ЧТО ОКАЗАЛОСЬ ТЯЖЕЛО НАЙТИ НУЖНУЮ МЕБЕЛЬ К МОЕМУ ПРОЕКТУ. ПЕРЕРЫЛА ВЕСЬ ИНТЕРНЕТ И ПОПАЛА НА ЭТИХ РЕБЯТ. БЫЛА ОЧЕНЬ ПРИЯТНО УДИВЛЕНА КАЧЕСТВОМ И СКОРОСТЬЮ. ЗАКАЗ БЫЛ КРУПНЫЙ. БЫЛО НЕСКОЛЬКО ПРОЕКТОВ. ОДИН ИЗ НИХ РЕСТОРАН В СТИЛЕ ЛОФТ. БЫЛА ВЫПОЛНЕНА КОЛОССАЛЬНАЯ РАБОТА И <span>BLACK REFLECTION</span> СПРАВИЛИСЬ С ЭТОЙ ЗАДАЧЕЙ НА ВСЕ 100%. СПАСИБО!</div>
+								</div></div>
+							<div><div class="reviews-slider-img">
+								<img src="img/sl.jpg" alt="slider" class="img-fluid">
+							</div>
+								<div class="reviews-slider-text">
+									<div class="reviews-slider-title">ЕЛЕНА НАУМОВА</div>
+									<div class="reviews-slider-descr">Я ДИЗАЙНЕР ИНТЕРЬЕРОВ. И СТОЛКНУЛОСЬ С ТАКОЙ ПРОБЛЕМОЙ, ЧТО ОКАЗАЛОСЬ ТЯЖЕЛО НАЙТИ НУЖНУЮ МЕБЕЛЬ К МОЕМУ ПРОЕКТУ. ПЕРЕРЫЛА ВЕСЬ ИНТЕРНЕТ И ПОПАЛА НА ЭТИХ РЕБЯТ. БЫЛА ОЧЕНЬ ПРИЯТНО УДИВЛЕНА КАЧЕСТВОМ И СКОРОСТЬЮ. ЗАКАЗ БЫЛ КРУПНЫЙ. БЫЛО НЕСКОЛЬКО ПРОЕКТОВ. ОДИН ИЗ НИХ РЕСТОРАН В СТИЛЕ ЛОФТ. БЫЛА ВЫПОЛНЕНА КОЛОССАЛЬНАЯ РАБОТА И <span>BLACK REFLECTION</span> СПРАВИЛИСЬ С ЭТОЙ ЗАДАЧЕЙ НА ВСЕ 100%. СПАСИБО!</div>
+								</div></div>
+						</div>
+					</div>
+				</div>
+				
 			</div>
 		</section>
 		<section class="faq">
@@ -137,21 +185,76 @@
 			</div>
 
 		</section>
-
 <section class="about">
 	<div class="container-fluid">
 		<h3 class="title">О нас</h3>
 		<div class="row">
-			<div class="col-sm-4"></div>
-			<div class="col-sm-8">
+			<div class="col-lg-5 text-center">
+				<a href="https://goo.gl/maps/v75umJUBMH92" target="_blank" class="about-link-map"><img src="img/map.png" alt="map" class="img-fluid"></a>
+			</div>
+			<div class="col-lg-7">
 				<div class="about-title">
 					<span>BLACK REFLECTION</span> - ЭТО ВАША ВОЗМОЖНОСТЬ ПОДЧЕРКНУТЬ СВОЙ ИНТЕРЬЕР УНИКАЛЬНОЙ, ЭСТЕТИЧЕСКОЙ, СОВРЕМЕННОЙ МЕБЛЬЮ. МЫ С ЛЮБОВЬЮ ОТНОСИМСЯ К КАЖДОЙ ИЗГОТОВЛЕННОЙ НАМИ ДЕТАЛИ И ПОЭТОМУ ВЫ ПОЛУЧИТЕ КАЧЕСТВЕННЫЙ ТОВАР. НЕСМОТРЯ НА ТО, ЧТО НА РЫНКЕ РАБОТАЕМ НЕ ДОЛГО, У НАС УЖЕ СФОРМИРОВАЛАСЬ БОЛЬШАЯ КЛИЕНТСКАЯ БАЗА, В КОТОРОЙ ЕСТЬ НЕ ТОЛЬКО ОБЫЧНЫЕ ЗАКАЗЧИКИ, НО И ДИЗАЙНЕРЫ С АРХИТЕКТОРАМИ.
 				</div>
+				<img src="img/footer.png" alt="photo" class="img-fluid">
+				<div class="text-center about-town">ХАРЬКОВ</div>
+				<ul class="about-list">
+					<li class="about-item">
+						<a href="tel:+380665254066" class="about-link">
+							<div class="about-img">
+								<img src="img/ph.png" alt="phone" class="img-fluid">
+							</div>
+							<span>ТЕЛЕФОН</span>
+							<p>+38(066)52-54-066</p>
+						</a>
+					</li>
+					<li class="about-item">
+						<div class="about-img">
+							<img src="img/m.png" alt="map" class="img-fluid">
+						</div>
+						<span>АДРЕС</span>
+						<p>ул. Третья, 24</p>
+					</li>
+					<li class="about-item">
+						<div class="about-img">
+							<img src="img/clock.png" alt="cl" class="img-fluid">
+						</div>
+						<span>Режим работы</span>
+						<p>Ежедневно<br>
+							с 8-18.00</p>
+					</li>
+					<li class="about-item">
+						<a href="mailto:blvck.com.ua@gmail.com" class="about-link">
+							<div class="about-img">
+								<img src="img/email.png" alt="email" class="img-fluid">
+							</div>
+							<span>E-MAIL</span>
+							<p>blvck.com.ua@gmail.com</p>
+						</a>
+					</li>
+					<li class="about-item">
+						<a href="#" class="about-link">
+							<div class="about-img">
+								<img src="img/i.png" alt="instagram" class="img-fluid">
+							</div>
+							<span>Instagram</span>
+							<p>@blvck.com.ua</p>
+						</a>
+					</li>
+					<li class="about-item">
+						<a href="#" class="about-link">
+							<div class="about-img">
+								<img src="img/f.png" alt="facebook" class="img-fluid">
+							</div>
+							<span>FACEBOOK</span>
+							<p>@blvck.com.ua</p>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
 </section>
-
 	</main><!-- MAIN CONTENT [END] -->
 
 @@include('template/layout/footer.html')
