--- a/template/layout/header.html
+++ b/template/layout/header.html
@@ -19,7 +19,10 @@
 
     <!--[if IE]>
     <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -36,23 +39,78 @@
     <header class="header">
         <div class="container-fluid">
             <div class="header-wrapper">
-            <div class="row">
-                <div class="col-lg-3">
+            <div class="row align-items-center">
+                <div class="col-md-4 col-sm-12 col-12 header-first">
+
                     <a href="#" class="header-logo">
                         <img src="img/logo.png" alt="logo" class="img-fluid">
                     </a>
+                    <div class="burger-button">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <div class="col-md-5 col-sm-12 header-second">
+                    <nav class="header-nav">
+                        <ul class="header-list">
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">МАГАЗИН</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">ОТЗЫВЫ</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">FAQ</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">О НАС</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-md-3 col-sm-12 header-third">
+                    <div class="header-address">
+                        <ul class="header-address-list">
+                            <li class="header-address-item">ХАРЬКОВ</li>
+                            <li class="header-address-item"><a href="tel:+380665254066" target="_blank">+38 (066) 52-54-066</a></li>
+                            <li class="header-address-item">ул. Третья, 24</li>
+                            <li class="header-address-item"><a href="mailto:blvck.com.ua@gmail.com" target="_blank">blvck.com.ua@gmail.com</a></li>
+                        </ul>
+                        <ul class="header-address-social">
+                            <li><a href="#"><img src="img/i.png" alt="instagram" class="img-fluid"></a></li>
+                            <li><a href="#"><img src="img/f.png" alt="facebook" class="img-fluid"></a></li>
+                        </ul>
+                        <div class="header-basket">
+                            <a href="#"><img src="img/bas.png" alt="basket" class="img-fluid">Корзина</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             </div>
-
-            <nav class="header__nav" role="navigation">
-                <ul class="header__nav-list">
-                    <li class="header__nav-list-item">
-                        <a href="#" class="header__nav-link header__nav-link--current"></a>
-                    </li>
-                </ul>
-            </nav>
-
+        </div>
+        <div class="header-menu">
+            <div class="container">
+                <div class="row">
+                    <nav class="mobile-nav">
+                        <ul class="header-list">
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">МАГАЗИН</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">ОТЗЫВЫ</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">FAQ</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">О НАС</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header><!-- HEADER [END] -->
 		
