--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -17,13 +17,13 @@ body {
 //  margin: 0 auto;
 //}
 
-$footerHeight: 242px;
+//$footerHeight: 242px;
 
-.fixcontent {
-  min-height: 100%;
-  margin: 0 0 (-$footerHeight);
-  padding: 0 0 $footerHeight;
-}
+//.fixcontent {
+//  min-height: 100%;
+//  margin: 0 0 (-$footerHeight);
+//  padding: 0 0 $footerHeight;
+//}
 
 //----------------------------------------------------//
 // HEADER                                             //
@@ -42,5 +42,5 @@ $footerHeight: 242px;
 //----------------------------------------------------//
 
 .footer {
-  height: $footerHeight;
+  //height: $footerHeight;
 }
