--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,20 +11,311 @@
 // MAIN 						 				      //
 //----------------------------------------------------//
 .header{
-        padding: 15px 0;
-        position: relative;
-        &-wrapper{
-                border-bottom: 1px solid $default;
-        }
+  padding: 15px 0;
+  position: relative;
+  &-wrapper{
+          border-bottom: 1px solid $default;
+  }
+  &-logo{
+    display: inline-block;
+    width: 50%;
+  }
+  &-first{
+    @include b(phablet){
+      margin-bottom: 20px;
+    }
+  }
+  &-second{
+    position: relative;
+    &:after, &:before{
+      content: '';
+      position: absolute;
+      bottom: -20px;
+      right: 0;
+      width: 1px;
+      height: 64px;
+      background-color: $default;
+      @include b (laptop){
+        bottom: -17px;
+      }
+      @include b (tablet){
+        bottom: -44px;
+        height: 107px;
+      }
+    }
+    &:before{
+      left: 0;
+    }
+    @include b(phablet){
+      display: none;
+    }
+  }
+  &-list{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &-list-item{
+    flex: 25% 0 1;
+    text-align: center;
+    position: relative;
+    font-size: 14px;
+    &:after{
+      position: absolute;
+      content: '';
+      width: 1px;
+      height: 17px;
+      background-color: $default;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: -19px;
+      @include b (laptop){
+        bottom: -16px;
+      }
+      @include b (tablet){
+        bottom: -43px;
+        height: 22px;
+      }
+      @include b (phablet){
+        display: none;
+      }
+    }
+    @include b (tablet){
+      font-size: 14px;
+    }
+    @include b (phablet){
+      flex: 100% 0 1;
+    }
+  }
+  &-address{
+    font-size: 14px;
+    line-height: 16px;
+    text-align: right;
+    margin-right: 45px;
+    @include b (desktop){
+      margin-right: 15px;
+    }
+    @include b (laptop){
+      font-size: 12px;
+      line-height: 14px;
+      margin-right: 5px;
+    }
+    @include b (phablet){
+      border-left: none;
+      text-align: center;
+    }
+    &-list{
+      display: inline-block;
+      margin-right: 15px;
+      @include b (desktop){
+        margin-right: 3px;
+      }
+      @include b (laptop){
+        margin-right: 2px;
+      }
+    }
+    &-social{
+      width: 28px;
+      display: inline-block;
+      @include b (laptop){
+        width: 25px;
+      }
+      a{
+        display: inline-block;
+        width: 100%;
+      }
+
+    }
+  }
+  &-basket{
+    display: inline-block;
+    margin-left: 40px;
+    @include b (desktop){
+      margin-left: 5px;
+    }
+    @include b (laptop){
+      margin-left: 3px;
+    }
+    a{
+      display: inline-block;
+      width: 45px;
+      @include b (laptop){
+        width: 40px;
+      }
+    }
+  }
 }
 
+.burger-button{
+  display: none;
+  @include b (phablet){
+    display: inline-block;
+  }
+}
+.burger-button {
+  position: relative;
+  width: 40px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 11;
+  float: right;
+}
+.burger-button.active span:nth-of-type(1) {
+  opacity: 0;
+}
+.burger-button.active span:nth-of-type(2) {
+  -webkit-transform: translateY(-50%) rotateZ(45deg);
+  -ms-transform: translateY(-50%) rotate(45deg);
+  transform: translateY(-50%) rotateZ(45deg);
+}
+.burger-button.active span:nth-of-type(3) {
+  -webkit-transform: translateY(-50%) rotateZ(-45deg);
+  -ms-transform: translateY(-50%) rotate(-45deg);
+  transform: translateY(-50%) rotateZ(-45deg);
+}
+.burger-button.active span:nth-of-type(4) {
+  opacity: 0;
+}
+.burger-button span {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background: $default;
+  border-radius: 5px;
+  -webkit-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+.burger-button span:nth-of-type(1) {
+  top: 0;
+}
+.burger-button span:nth-of-type(2) {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.burger-button span:nth-of-type(3) {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.burger-button span:nth-of-type(4) {
+  bottom: 0;
+}
+.header-menu {
+  display: block;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  right: 100%;
+  background: url("../img/main-3-1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 72px;
+  z-index: 10;
+  overflow-y: scroll;
+  -webkit-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.header-menu .mobile-nav {
+  list-style: none;
+  margin-top: 10px;
+}
+
+.header-menu .mobile-nav li a {
+  color: $default;
+  line-height: 80px;
+  text-shadow: 1px 2px 0 rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+  font-size: 30px;
+}
+
+.header-menu .mobile-nav li a.btn {
+  line-height: 47px;
+  margin-right: 19px;
+  margin-left: -19px;
+}
+
+.header-menu.opened {
+  right: 0;
+}
+/*******************************************************/
 .baner{
-        background: #000 url('../img/baner.jpg')no-repeat center;
-        height: 975px;
-        -webkit-background-size: cover;
-        background-size: cover;
+  &-first{
+    background: #000 url('../img/main_1.jpg')no-repeat center;
+    height: 975px;
+    -webkit-background-size: cover;
+    background-size: cover;
+  }
+  &-second{
+    background: #000 url('../img/main-3-1.jpg')no-repeat center;
+    height: 975px;
+    -webkit-background-size: cover;
+    background-size: cover;
+    h1{
+      color: #fff;
+      margin-top: 200px;
+      margin-bottom: 50px;
+      font-size: 52px;
+      font-weight: bold;
+      line-height: 62px;
+      @include b (laptop){
+        font-size: 42px;
+        line-height: 52px;
+        margin-bottom: 30px;
+      }
+      @include b (tablet){
+        font-size: 32px;
+        line-height: 42px;
+        margin-bottom: 20px;
+      }
+    }
+    p{
+      font-size: 23px;
+      line-height: 30px;
+      span{
+        color: $default;
+      }
+    }
+  }
+  &-third{
+    background: #000 url('../img/main_3.jpg')no-repeat center;
+    height: 975px;
+    -webkit-background-size: cover;
+    background-size: cover;
+  }
+  &-main{
+    background: #000 url('../img/main-3-1.jpg')no-repeat center;
+    height: 550px;
+    -webkit-background-size: cover;
+    background-size: cover;
+    padding-top: 125px;
+    text-align: center;
+    h1{
+      margin-bottom: 30px;
+      font-size: 39px;
+    }
+    span{
+      color: $default;
+    }
+  }
 }
-
+.dnone{
+  @include b (phablet){
+    display: none;
+  }
+}
+.dblock{
+  display: none;
+  @include b (phablet){
+    display: block;
+  }
+}
 .product-titles{
         &-wrap{
                 padding-left: 15px;
@@ -36,12 +327,12 @@
         text-transform: uppercase;
         text-align: center;
         overflow: hidden;
+        margin-top: 20px;
         &:before, &:after{
                 content: '';
                 display: inline-block;
                 vertical-align: middle;
                 width: 100%;
-                content: '';
                 height: 1px;
                 background: $default;
                 position: relative;
@@ -61,34 +352,179 @@
         font-family: $mainFont;
         font-size: 12px;
         font-weight: 400;
+        text-transform: uppercase;
 }
 .reviews{
         padding: 15px 0;
+        &-slider{
+          &>div{
+            margin: 10px 0 -20px;
+          }
+          &-img{
+            width: 100px;
+            display: inline-block;
+            margin-right: 20px;
+            vertical-align: middle;
+            @include b (phablet){
+              display: block;
+              margin: 0 auto;
+            }
+            img{
+              border-radius: 50%;
+              border: 2px solid #D2A64A;
+            }
+          }
+          &-text{
+            display: inline-block;
+            width: calc(100% - 200px);
+            vertical-align: middle;
+            @include b (phablet){
+              display: block;
+              text-align: center;
+              width: 100%;
+            }
+          }
+          &-title{
+            font-size: 18px;
+            margin-bottom: 10px;
+          }
+          &-descr{
+            font-size: 14px;
+            line-height: 16px;
+            span{
+              color: $default;
+            }
+          }
+        }
 }
 .faq{
         padding: 15px 0;
         .title{
                 margin-bottom: 50px;
+          &:after, &:before{
+            @include b (phablet){
+              display: none;
+            }
+          }
         }
         &-wrapper{
                 display: flex;
                 flex-wrap: wrap;
                 &>div{
-                        font-size: 25px;
+                        font-size: 18px;
                 }
         }
         &-line{
                 border-right: 1px solid $default;
                 width: 36%;
                 &>div{
-                        padding: 30px 30px 30px 15px;
+                        padding: 0 30px 15px 15px;
                         text-decoration: underline;
+                }
+                @include b (phablet){
+                        width: 100%;
+                        border-right: none;
                 }
         }
         &-descr{
                 width: 54%;
                 &>div{
-                        padding: 30px;
+                        padding: 0 0 15px 30px;
+                }
+                @include b (phablet){
+                        width: 100%;
+                        border-bottom: 1px solid $default;
                 }
         }
 }
+.faq .faq-wrapper:last-of-type .faq-descr{
+  @include b (phablet){
+    border-bottom: none;
+  }
+}
+.about{
+        &-title{
+                color: #fff;
+                font-size: 14px;
+                line-height: 17px;
+                margin-bottom: 20px;
+                margin-top: 20px;
+                span{
+                        color: $default;
+                        font-size: 20px;
+                }
+        }
+        iframe{
+
+        }
+        &-town{
+                color: $default;
+                text-decoration: underline;
+        }
+        &-link-map{
+                display: inline-block;
+                padding: 15px;
+                position: relative;
+                &:after{
+                  position: absolute;
+                  content: '';
+                  //margin-left: 20px;
+                  //transform: skew(-25deg) rotate(-25deg);
+                  //width: 75px;
+                  //height: 198px;
+                  //background: red;
+                  //top: 169px;
+                  //right: -64px;
+                }
+        }
+        &-list{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+        }
+        &-item{
+                text-align: center;
+                width: 25%;
+                @include b (desktop){
+                        width: 33.33%;
+                }
+                @include b (laptop){
+                        width: 50%;
+                }
+                @include b (phablet){
+                        width: 100%;
+                }
+                img{
+                        display: block;
+                        margin: 0 auto;
+                }
+                span{
+                        color: #8d8d8d;
+                        display: block;
+                        text-transform: uppercase;
+                        font-size: 14px;
+                }
+                p{
+                        color: $default;
+                        font-size: 20px;
+                        min-height: 74px;
+                }
+
+        }
+        &-link{
+                color: $default;
+                font-size: 20px;
+                text-decoration: none;
+                word-wrap: normal;
+                &:hover{
+                        opacity: 0.8;
+                        color: $default;
+                }
+        }
+        &-img{
+                width: 51px;
+                min-height: 51px;
+                margin: 0 auto 10px;
+        }
+}
+
